--- a/sahi/pom.xml
+++ b/sahi/pom.xml
@@ -131,6 +131,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
