Create separate client library

--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 
 	<groupId>com.foreach.sahi</groupId>
 	<artifactId>sahi</artifactId>
-	<version>5.0-SNAPSHOT</version>
+	<version>5.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<project.finalVersion>5.0</project.finalVersion>
+		<project.finalVersion>5.1</project.finalVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -21,5 +21,20 @@
 		<module>sahi-test-webapp</module>
 		<module>sahi-proxy</module>
 	</modules>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 </project>
