--- a/sahi-client/pom.xml
+++ b/sahi-client/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.foreach.sahi</groupId>
 		<artifactId>sahi</artifactId>
-		<version>5.0-SNAPSHOT</version>
+		<version>5.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sahi-client</artifactId>
@@ -18,10 +18,19 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
+					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.foreach.sahi</groupId>
+			<artifactId>sahi-proxy</artifactId>
+			<version>5.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
