Build SAHI version for MAC OS X

--- a/sahi/pom.xml
+++ b/sahi/pom.xml
@@ -76,6 +76,7 @@
 						<configuration>
 							<descriptors>
 								<descriptor>${project.basedir}/src/assembly/win64.xml</descriptor>
+								<descriptor>${project.basedir}/src/assembly/mac.xml</descriptor>
 							</descriptors>
 						</configuration>
 					</execution>
